# compiler

./: .gitignore  CMakeLists.txt  README.md  main.c  syntax.txt  test.txt
ast/: ast.c  ast.h
compiler/: compiler.c
config/: globals.h
io/: io.c  io.h
lexer/: lexer.c  lexer.h
list/: list.c  list.h
logging/: logging.c  logging.h
parser/: parser.c  parser.h
test_evals/: bool_eval.c  expression_evaluator.c
token/: token.c  token.h
types/: types.c  types.h
